[tool.poetry]
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
description = "A custom unittest runner for Python"
license = "MIT"
name = "unittestx"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^2.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
unittestx = 'unittestx.app:main'

repository = "https://github.com/fullstack-spiderman/unittestx"
